<resources>
    <string name="app_name">Family Budget</string>
    <string name="title_budget">Presupuesto</string>
    <string name="title_bills">Gastos</string>
    <string name="title_income">Ingresos</string>
    <string name="WEB_CLIENT_ID">892354353679-lpoqv56jag2g61t3gccmba1mump4g3l3.apps.googleusercontent.com</string>
    <string name="settings_title">Ajustes</string>
    <string name="register_title">Registrate en Family Budget</string>
    <string name="create_account_button">Crear cuenta</string>
    <string name="google_signin_text">Iniciar sesión con Google</string>
    <string name="alternative_text_register">O registrate con</string>
    <string name="or_continue_with_text">O continua con</string>
    <string name="no_have_account_text">¿No tienes una cuenta?</string>
    <string name="create_account_text">" Crear cuenta"</string>
    <string name="login_text">Ingresar</string>
    <string name="add_budget">Añadir presupuesto</string>
    <string name="new_budget_title">Nuevo presupuesto</string>
    <string name="add_new_expense_label">Agregar nuevo gasto</string>
    <string name="add_expense_button">Añadir nuevo gasto</string>
    <string name="amount_hint">Monto</string>
    <string name="origin_hint">Origen</string>
    <string name="add_income_button">Agregar nuevo ingreso</string>
    <string name="edit_income_button">Editar ingreso</string>
    <string name="edit_expense_button">Editar gasto</string>
    <string name="dropdown_menu">card_options\n</string>
    <string name="default_web_client_id">892354353679-lpoqv56jag2g61t3gccmba1mump4g3l3.apps.googleusercontent.com</string>

</resources>