<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.familybudget.ui.lo"
        android:label="Login" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_budget2"
            app:destination="@id/navigation_budget" />
    </fragment>

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.familybudget.ui.bills.BillsFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget"
        >
        <action
            android:id="@+id/action_navigation_budget_to_navigation_income"
            app:destination="@id/navigation_income" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bills"
        android:name="com.example.familybudget.ui.budget.BudgetFragment"
        android:label="@string/title_bills"
        tools:layout="@layout/fragment_bills" />

    <fragment
        android:id="@+id/navigation_income"
        android:name="com.example.familybudget.ui.Income.IncomeFragment"
        android:label="@string/title_income"
        tools:layout="@layout/fragment_income" >
        <action
            android:id="@+id/action_navigation_income_to_navigation_bills"
            app:destination="@id/navigation_bills" />
    </fragment>

</navigation>