<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Título -->
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Campo de correo electrónico -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="Correo electrónico"
        android:inputType="textEmailAddress" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Contraseña"
        android:inputType="textPassword" />
    <!--    repetir contraseña -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Confirma la Contraseña"
        android:inputType="textPassword" />

    <!-- Botón de inicio de sesión -->
    <Button
        android:id="@+id/btnRegisterAccount"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cornerRadius="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/create_account_button"
        app:iconGravity="textStart" />

    <!-- Separador con texto en medio de "O continua con" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/secondary" />

        <TextView
            android:id="@+id/textOrContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/alternative_text_register"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/secondary" />

    </LinearLayout>

    <!-- Botón de inicio de sesión con Google sin cambiar el color del icono-->
    <Button
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        app:icon="@drawable/google_logo"
        app:iconTint="@null"
        android:text="@string/google_signin_text"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:borderWidth="1dp" />



    </LinearLayout>